--- a/adopt.html
+++ b/adopt.html
@@ -1,4 +1,42 @@
 ---
 layout: default
 title: Adopt
+adopt-dog_image: /images/TSP-1.jpg
+cost-dog_image: /images/TSP-2.jpg
 ---
+<!-- intro -->
+<section class="padded">
+    <h2>Meet the pups</h2>
+    <p>Unfortunately we do not have the time and resources to describe every single one of our 160+ dogs online. </p>
+    <p>If you are interested in one of the pups or are looking for more information please don’t hesitate to reach out directly to us! we will provide you with all information you need to find your new best friend.</p>
+    <a href="/contact.html" class="button">I need more information</a>
+</section>
+
+<!-- banner -->
+<section class="bg-featured padded center">
+    <h2>find out more about the <br> adoption process</h2>
+    <a href="#adoption-process">
+        <i class="fa-solid fa-angle-down margin-t-2"></i>
+    </a>
+</section>
+
+<!-- dogs -->
+<section>
+
+</section>
+
+<!-- adoption info -->
+<section class="grid" id="adoption-process">
+    <div class="col-6_sm-12 padded">
+        <h3>How to adopt</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima.</p>
+        <a href="#" class="button">Reach out to us</a>
+    </div>
+    <div class="col-6 bg-image sm-hide" style="background-image: url('{{page.adopt-dog_image}}');"></div>
+
+    <div class="col-6 bg-image sm-hide" style="background-image: url('{{page.cost-dog_image}}');"></div>
+    <div class="col-6_sm-12 padded">
+        <h3>What's the cost?</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima.</p>
+    </div>
+</section>
