slider with jekyll loop

--- a/adopt.html
+++ b/adopt.html
@@ -16,7 +16,22 @@ dogs:
  - name: Jaguar
    age: 3
    _image: /images/TSP-1.jpg
+ - name: Lanta
+   age: 4
+   _image: /images/TSP-3.jpg
+ - name: Martha
+   age: 2
+   _image: /images/TSP-2.jpg
+ - name: Isabella
+   age: 7
+   _image: /images/TSP-4.jpg
+ - name: Jaguar
+   age: 3
+   _image: /images/TSP-1.jpg
 ---
+
+{% include adoption-banner.html %}
+
 <!-- intro -->
 <section class="padded">
     <h2>Meet the pups</h2>
@@ -46,6 +61,7 @@ dogs:
 {% endfor %}
 
 </section>
+
 
 <!-- adoption info -->
 <section class="grid-middle padded" id="adoption-process">
