--- a/contact.html
+++ b/contact.html
@@ -31,7 +31,9 @@ title: Contact
         </div>
     </div>
 </section>
-<hr>
+
+<!-- adoption banner -->
+{% include adoption-banner.html %}
 
 <!-- social banner -->
 <section class="grid-center padded">
