--- a/about.html
+++ b/about.html
@@ -3,38 +3,47 @@ layout: default
 title: About
 ---
 <!-- our story -->
-<section class="padded">
-    <h2 class="center">The power of one to make a change</h2>
+<section class="grid-spaceBetween padded bg-light">
+    <div class="col-7-middle">
+    <h2 class="padded">The power of one to make a change</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quam nobis aliquid officiis laudantium iste cumque error rem doloribus perferendis optio perspiciatis labore sint, cum ipsam veritatis quae. Quasi, est.</p>
+    </div>
+    <div class="col-4 bg-image"></div>
 </section>
 
 <!-- quote -->
-<section class="grid-middle center padded">
-    <span class="col-1">"</span>
-    <p class="col-10">I know I can't save every single one, but I want to help as many as I can.</p>
-    <span class=col-1>"</span>
-    <p class="col-12 right"> – Tamara Johnston</p>
+<section class="grid padded-lg">
+    <div class="col-1 right">
+            <span class="quote-icon">“</span>
+    </div>
+    <div class="col-10">
+        <p class="center text-md font-weight-light">I know I can't save every single one, but I want to help as many as I can.</p>
+        <p class="right subtitle"> – Tamara Johnston</p>
+    </div>
+    <div class="col-1"> 
+       <span class="quote-icon">”</span>
+   </div>
 </section>
 
-<!-- photo banner tamara -->
-
 <!-- what we do - icon grid-->
-<section class="grid center padded">
+<section class="grid center padded bg-light">
     <h2 class="col-12">What we do</h2>
-    <div class="col-4">
-        <i class="fa-solid fa-house"></i>
+    <div class="col-4 padded">
+        <i class="fa-solid fa-house padded"></i>
         <h3>Sanctuary</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita fugiat nostrum harum vero iste! Eum tempora fugiat laborum autem doloremque perspiciatis corporis odit, at animi. Quas est consequatur aspernatur animi?</p>
     </div>
-    <div class="col-4">
-        <i class="fa-solid fa-heart-pulse"></i>
+    <div class="col-4 padded">
+        <i class="fa-solid fa-heart-pulse padded"></i>
         <h3>Veterinary Care</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit totam magnam assumenda deleniti, ex fugiat facilis perferendis inventore blanditiis libero sapiente. Eos explicabo dolore tenetur asperiores quod, alias amet velit.</p>
     </div>
-    <div class="col-4">
-        <i class="fa-solid fa-graduation-cap"></i>
+    <div class="col-4 padded">
+        <i class="fa-solid fa-graduation-cap padded"></i>
         <h3>Education</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse quod quos adipisci dolorum in exercitationem, blanditiis animi modi et optio ipsam enim accusamus qui cupiditate aliquam, ratione maiores aperiam explicabo.</p>
     </div>
 </section>
+
+<!-- donation banner -->
