--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ title: About
 <!-- our story -->
 <section class="grid-spaceBetween padded bg-light">
     <div class="col-7-middle">
-    <h2 class="padded">The power of one to make a change</h2>
+    <h2 class="margin-b">The power of one to make a change</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quam nobis aliquid officiis laudantium iste cumque error rem doloribus perferendis optio perspiciatis labore sint, cum ipsam veritatis quae. Quasi, est.</p>
     </div>
@@ -31,17 +31,17 @@ title: About
     <h2 class="col-12">What we do</h2>
     <div class="col-4 padded">
         <i class="fa-solid fa-house padded"></i>
-        <h3>Sanctuary</h3>
+        <h3 class="padded">Sanctuary</h3>
         <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Expedita fugiat nostrum harum vero iste! Eum tempora fugiat laborum autem doloremque perspiciatis corporis odit, at animi. Quas est consequatur aspernatur animi?</p>
     </div>
     <div class="col-4 padded">
         <i class="fa-solid fa-heart-pulse padded"></i>
-        <h3>Veterinary Care</h3>
+        <h3 class="padded">Veterinary Care</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit totam magnam assumenda deleniti, ex fugiat facilis perferendis inventore blanditiis libero sapiente. Eos explicabo dolore tenetur asperiores quod, alias amet velit.</p>
     </div>
     <div class="col-4 padded">
         <i class="fa-solid fa-graduation-cap padded"></i>
-        <h3>Education</h3>
+        <h3 class="padded">Education</h3>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Esse quod quos adipisci dolorum in exercitationem, blanditiis animi modi et optio ipsam enim accusamus qui cupiditate aliquam, ratione maiores aperiam explicabo.</p>
     </div>
 </section>
