donation banner header and footer

--- a/about.html
+++ b/about.html
@@ -26,6 +26,8 @@ title: About
    </div>
 </section>
 
+{% include donation-banner.html %}
+
 <!-- what we do - icon grid-->
 <section class="grid center padded bg-light">
     <h2 class="col-12">What we do</h2>
