--- a/help.html
+++ b/help.html
@@ -10,13 +10,13 @@ title: How you can help
     <div class="col-6_sm-12 padded">
         <h3>Sponsor a dog</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="#" class="button">Sponsor</a>
+        <a href="#" class="margin-t-1 button">Sponsor</a>
     </div>
     <!-- volunteer -->
     <div class="col-6_sm-12 padded">
         <h3>Volunteer at the sanctuary</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="/contact.html" class="button">Contact us</a>
+        <a href="/contact.html" class="button margin-t-1">Contact us</a>
     </div>
     <div class="col-6 bg-image sm-hide"></div>
     <!-- flight volunteer -->
@@ -24,13 +24,13 @@ title: How you can help
     <div class="col-6_sm-12 padded">
         <h3>Be a flight volunteer</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="/contact.html" class="button">Reach out to us</a>
+        <a href="/contact.html" class="button margin-t-1">Reach out to us</a>
     </div>
     <!-- donate -->
     <div class="col-6_sm-12 padded">
         <h3>Make a donation</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="#" class="button">Donate</a>
+        <a href="#" class="button margin-t-1"> Donate</a>
     </div>
     <div class="col-6 bg-image sm-hide"></div>
     <!-- share -->
@@ -38,7 +38,7 @@ title: How you can help
     <div class="col-6_sm-12 padded">
         <h3>Share about us</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
-        <a href="#" class="button">Spread the word</a>
+        <a href="#" class="button margin-t-1">Spread the word</a>
     </div>
 </section>
 
