--- a/about.html
+++ b/about.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: About
+about_image: /images/TSP-7.jpg
 ---
 <!-- our story -->
 <section class="grid-spaceBetween padded bg-light">
@@ -9,7 +10,11 @@ title: About
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem.</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius quam nobis aliquid officiis laudantium iste cumque error rem doloribus perferendis optio perspiciatis labore sint, cum ipsam veritatis quae. Quasi, est.</p>
     </div>
-    <div class="col-4 bg-image"></div>
+    <div class="col-4">
+        <div class="bg-image square" style="background-image: url('{{page.about_image}}');">
+
+        </div>
+    </div>
 </section>
 
 <!-- quote -->
