--- a/help.html
+++ b/help.html
@@ -1,12 +1,19 @@
 ---
 layout: default
 title: How you can help
+volunteer_image: /images/TSP-6.jpg
+donate_image: /images/TSP-5.jpg
+flight-volunteer_image: /images/TSP-3.jpg
+sponsor_image: /images/TSP-5.jpg
+share_image: /images/TSP-1.jpg
 ---
 
 <section class="grid padded">
     <h2 class="col-12 center">Ways to get involved...</h2>
     <!-- sponsor -->
-    <div class="col-6 bg-image sm-hide"></div>
+    <div class="col-6 sm-hide">
+        <div class="bg-image landscape" style="background-image: url('{{page.sponsor_image}}');"></div>
+    </div>
     <div class="col-6_sm-12 padded">
         <h3>Sponsor a dog</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
@@ -18,9 +25,13 @@ title: How you can help
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
         <a href="/contact.html" class="button margin-t-1">Contact us</a>
     </div>
-    <div class="col-6 bg-image sm-hide"></div>
+    <div class="col-6 sm-hide">
+        <div class="bg-image landscape" style="background-image: url('{{page.volunteer_image}}');"></div>
+    </div>
     <!-- flight volunteer -->
-    <div class="col-6 bg-image sm-hide"></div>
+    <div class="col-6 sm-hide">
+        <div class="bg-image landscape" style="background-image: url('{{page.flight-volunteer_image}}');"></div>
+    </div>
     <div class="col-6_sm-12 padded">
         <h3>Be a flight volunteer</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
@@ -32,9 +43,13 @@ title: How you can help
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
         <a href="#" class="button margin-t-1"> Donate</a>
     </div>
-    <div class="col-6 bg-image sm-hide"></div>
+    <div class="col-6 sm-hide">
+        <div class="bg-image landscape" style="background-image: url('{{page.donate_image}}');"></div>
+    </div>
     <!-- share -->
-    <div class="col-6 bg-image sm-hide"></div>
+    <div class="col-6 sm-hide">
+        <div class="bg-image landscape" style="background-image: url('{{page.share_image}}');"></div>
+    </div>
     <div class="col-6_sm-12 padded">
         <h3>Share about us</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima?</p>
