--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Homepage
 banner_image: /images/TSP-3.jpg
 paypal_url: https://www.paypal.com/donate?token=zagr621ZNDWnZHpmoK_YwHsRhgzTWPADWHYdbtc0ducDPWh3osXZOX2R-l93fv65-_5gkIU9fci4lVOA
-cute-dog_image: /images/TSP-5.jpg
+dog-sanctuary_image: /images/TSP-6.jpg
 ---
 
 {% include donation-banner.html %}
@@ -16,7 +16,7 @@ cute-dog_image: /images/TSP-5.jpg
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nemo omnis sunt ut. Quidem consequuntur fuga non quod suscipit numquam nesciunt deleniti in, rem eligendi est voluptatibus? Eius consectetur aperiam voluptates.</p>
      </div>
     <div class="col-6 padded-sm">
-        <div class="bg-image landscape" style="background-image: url('{{page.cute-dog_image}}')"></div>
+        <div class="bg-image landscape" style="background-image: url('{{page.dog-sanctuary_image}}')"></div>
     </div>
     
     <!-- <div class="col-6">
@@ -25,3 +25,17 @@ cute-dog_image: /images/TSP-5.jpg
 </section>
 
 {% include adoption-banner.html %}
+
+<!-- quote -->
+<section class="grid padded capped-width">
+    <div class="col-1 right">
+            <span class="quote-icon">“</span>
+    </div>
+    <div class="col-10">
+        <p class="center text-md font-weight-light">I know I can't save every single one, but I want to help as many as I can.</p>
+        <p class="right subtitle"> – Tamara Johnston</p>
+    </div>
+    <div class="col-1"> 
+       <span class="quote-icon">”</span>
+   </div>
+</section>
