--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@ title: About
 about_image: /images/TSP-7.jpg
 ---
 <!-- our story -->
-<section class="grid-spaceBetween padded bg-light">
+<section class="grid-spaceBetween padded-lg bg-light">
     <div class="col-7-middle">
     <h2 class="margin-b">The power of one to make a change</h2>
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui ex nisi rerum doloribus tenetur sit voluptate, harum quis voluptatum ut natus. Officiis delectus hic obcaecati aspernatur earum quae expedita essem.</p>
@@ -21,7 +21,7 @@ about_image: /images/TSP-7.jpg
 {% include donation-banner.html %}
 
 <!-- what we do - icon grid-->
-<section class="grid center padded bg-light">
+<section class="grid center padded">
     <h2 class="col-12">What we do</h2>
     <div class="col-4 padded">
         <i class="fa-solid fa-house padded"></i>
