--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,12 @@
 layout: default
 title: Contact
 ---
+<!-- intro banner -->
+<section class="grid-middle bg-light vh30">
+    <h2 class="col-12 center">Let's connect!</h2>
+</section>
 
 <section class="padded">
-    <h2 class="center">Let's connect!</h2>
     <div class="grid">
         <div class="col-5 padded">
             <p>If you are interested in adopting, volunteering or have any other enquiries, shoot us a message.</p>
