--- a/help.html
+++ b/help.html
@@ -7,9 +7,12 @@ flight-volunteer_image: /images/TSP-3.jpg
 sponsor_image: /images/TSP-5.jpg
 share_image: /images/TSP-1.jpg
 ---
+<!-- intro banner -->
+<section class="grid-middle bg-light vh30">
+    <h2 class="col-12 center">Ways to get involved...</h2>
+</section>
 
 <section class="grid padded">
-    <h2 class="col-12 center">Ways to get involved...</h2>
     <!-- sponsor -->
     <div class="col-6 sm-hide">
         <div class="bg-image landscape" style="background-image: url('{{page.sponsor_image}}');"></div>
