--- a/adopt.html
+++ b/adopt.html
@@ -105,9 +105,8 @@ dogs:
     
 {% endfor %}
 
-    <div>
+    <div class="padded-t">
       <a href="#" class="button">See all dogs</a>
-
     </div>
 </section>
 
