--- a/adopt.html
+++ b/adopt.html
@@ -75,7 +75,7 @@ dogs:
   
       <div class="col-3 center padded-1">
           <div class="bg-image portrait" style="background-image: url('{{dog._image}}');"></div>
-          <h3>{{dog.name}}</h3>
+          <h3 class="margin-t-1 margin-b-0">{{dog.name}}</h3>
           <p>I am {{dog.age}} years old.</p>
       </div>
       
@@ -97,15 +97,15 @@ dogs:
 <section class="grid-center padded">
 {% for dog in page.dogs limit: 8 offset: 4%}
 
-    <div class="col-3 center padded-1">
+    <div class="col-3 center padded-1 margin-b-2">
         <div class="bg-image portrait" style="background-image: url('{{dog._image}}');"></div>
-        <h3>{{dog.name}}</h3>
+        <h3 class="margin-t-1 margin-b-0">{{dog.name}}</h3>
         <p>I am {{dog.age}} years old.</p>
     </div>
     
 {% endfor %}
 
-    <div class="padded-t">
+    <div>
       <a href="#" class="button">See all dogs</a>
     </div>
 </section>
