--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@ layout: default
 title: Contact
 ---
 <!-- intro banner -->
-<section class="grid-middle bg-light vh30">
+<section class="grid-middle bg-featured vh30">
     <h2 class="col-12 center">Let's connect!</h2>
 </section>
 
