--- a/help.html
+++ b/help.html
@@ -8,7 +8,7 @@ sponsor_image: /images/TSP-5.jpg
 share_image: /images/TSP-1.jpg
 ---
 <!-- intro banner -->
-<section class="grid-middle bg-light vh30">
+<section class="grid-middle bg-featured vh30">
     <h2 class="col-12 center">Ways to get involved...</h2>
 </section>
 
