--- a/adopt.html
+++ b/adopt.html
@@ -24,8 +24,7 @@ info-dog_image: /images/TSP-9.jpg
       
   {% endfor %}
   
-  </section>
-
+</section>
 
 <!-- adoption process banner -->
 <section class="bg-dark light-text padded center">
@@ -57,21 +56,21 @@ info-dog_image: /images/TSP-9.jpg
 <!-- adoption info -->
 <section class="grid-middle-spaceBetween padded bg-light" id="adoption-process">
   <!-- how to adopt -->
-    <div class="col-7_sm-12">
+    <div class="col-7_sm-12-middle padded">
       <h3>How to adopt</h3>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima.</p>
       <a href="#" class="button">Reach out to us</a>
     </div>
-    <div class="col-4">
+    <div class="col-5 padded">
       <div class="bg-image square sm-hide" style="background-image: url('{{page.adopt-dog_image}}');"></div>
     </div>
 
     <!-- more info -->
-    <div class="col-4">
+    <div class="col-5 padded">
       <div class="bg-image square sm-hide" style="background-image: url('{{page.info-dog_image}}');"></div>
     </div>
-    <div class="col-7_sm-12">
-      <h3>Get more information</h3>
+    <div class="col-7_sm-12-middle padded">
+      <h3>Get more information about specific dogs</h3>
       <p>Unfortunately we do not have the time and resources to describe every single one of our 160+ dogs online. </p>
       <p>If you are interested in one of the pups or are looking for more information please don’t hesitate to reach out directly to us! We will provide you with all information you need to find your new best friend.</p>
       <a href="/contact.html" class="button">I need more information</a>
@@ -79,11 +78,11 @@ info-dog_image: /images/TSP-9.jpg
     
   
     <!-- whats the cost -->
-    <div class="col-7_sm-12">
+    <div class="col-7_sm-12-middle padded">
         <h3>What's the cost?</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facilis laboriosam iste tempore ipsam officia modi debitis expedita id quaerat, inventore officiis temporibus sequi. Ipsum vel neque tempore iure rerum minima.</p>
     </div>
-    <div class="col-4">
+    <div class="col-5 padded">
       <div class="bg-image square sm-hide" style="background-image: url('{{page.cost-dog_image}}');"></div>
     </div>
 </section>
