--- a/all-dogs.html
+++ b/all-dogs.html
@@ -1,65 +1,87 @@
 ---
 layout: default
 dogs:
- - name: Lanta
-   age: 4
-   _image: /images/TSP-3.jpg
- - name: Martha
-   age: 2
-   _image: /images/TSP-2.jpg
- - name: Isabella
-   age: 7
-   _image: /images/TSP-4.jpg
- - name: Jaguar
-   age: 3
-   _image: /images/TSP-1.jpg
- - name: Freya
-   age: 4
-   _image: /images/TSP-3.jpg
- - name: Martha
-   age: 2
-   _image: /images/TSP-2.jpg
- - name: Isabella
-   age: 7
-   _image: /images/TSP-4.jpg
- - name: Jaguar
-   age: 3
-   _image: /images/TSP-1.jpg
- - name: Lanta
-   age: 4
-   _image: /images/TSP-3.jpg
- - name: Martha
-   age: 2
-   _image: /images/TSP-2.jpg
- - name: Isabella
-   age: 7
-   _image: /images/TSP-4.jpg
- - name: Jaguar
-   age: 3
-   _image: /images/TSP-1.jpg
- - name: Lanta
-   age: 4
-   _image: /images/TSP-3.jpg
- - name: Martha
-   age: 2
-   _image: /images/TSP-2.jpg
- - name: Isabella
-   age: 7
-   _image: /images/TSP-4.jpg
- - name: Jaguar
-   age: 3
-   _image: /images/TSP-1.jpg
- - name: Martha
-   age: 2
-   _image: /images/TSP-2.jpg
- - name: Isabella
-   age: 7
-   _image: /images/TSP-4.jpg
- - name: Jaguar
-   age: 3
-   _image: /images/TSP-1.jpg
+   -
+      name: Lanta
+      age: 4
+      _image: /images/TSP-3.jpg
+   -
+      name: Martha
+      age: 2
+      _image: /images/TSP-2.jpg
+   -
+      name: Isabella
+      age: 7
+      _image: /images/TSP-4.jpg
+   -
+      name: Jaguar
+      age: 3
+      _image: /images/TSP-1.jpg
+   -
+      name: Freya
+      age: 4
+      _image: /images/TSP-3.jpg
+   -
+      name: Martha
+      age: 2
+      _image: /images/TSP-2.jpg
+   -
+      name: Isabella
+      age: 7
+      _image: /images/TSP-4.jpg
+   -
+      name: Jaguar
+      age: 3
+      _image: /images/TSP-1.jpg
+   -
+      name: Lanta
+      age: 4
+      _image: /images/TSP-3.jpg
+   -
+      name: Martha
+      age: 2
+      _image: /images/TSP-2.jpg
+   -
+      name: Isabella
+      age: 7
+      _image: /images/TSP-4.jpg
+   -
+      name: Jaguar
+      age: 3
+      _image: /images/TSP-1.jpg
+   -
+      name: Lanta
+      age: 4
+      _image: /images/TSP-3.jpg
+   -
+      name: Martha
+      age: 2
+      _image: /images/TSP-2.jpg
+   -
+      name: Isabella
+      age: 7
+      _image: /images/TSP-4.jpg
+   -
+      name: Jaguar
+      age: 3
+      _image: /images/TSP-1.jpg
+   -
+      name: Martha
+      age: 2
+      _image: /images/TSP-2.jpg
+   -
+      name: Isabella
+      age: 7
+      _image: /images/TSP-4.jpg
+   -
+      name: Jaguar
+      age: 3
+      _image: /images/TSP-1.jpg
+   -
+      name: Zorro
+      age: 5
+      _image: /images/TSP-1.jpg
 ---
-
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
     <h2 class="col-12 center">Find your new best friend here</h2>
