dog image updated

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -4,83 +4,83 @@ dogs:
    -
       name: Lanta
       age: 4
-      _image: /images/TSP-3.jpg
+      dog_image: /images/TSP-3.jpg
    -
       name: Martha
       age: 2
-      _image: /images/TSP-2.jpg
+      dog_image: /images/TSP-2.jpg
    -
       name: Isabella
       age: 7
-      _image: /images/TSP-4.jpg
+      dog_image: /images/TSP-4.jpg
    -
       name: Jaguar
       age: 3
-      _image: /images/TSP-1.jpg
+      dog_image: /images/TSP-1.jpg
    -
       name: Freya
       age: 4
-      _image: /images/TSP-3.jpg
+      dog_image: /images/TSP-3.jpg
    -
       name: Martha
       age: 2
-      _image: /images/TSP-2.jpg
+      dog_image: /images/TSP-2.jpg
    -
       name: Isabella
       age: 7
-      _image: /images/TSP-4.jpg
+      dog_image: /images/TSP-4.jpg
    -
       name: Jaguar
       age: 3
-      _image: /images/TSP-1.jpg
+      dog_image: /images/TSP-1.jpg
    -
       name: Lanta
       age: 4
-      _image: /images/TSP-3.jpg
+      dog_image: /images/TSP-3.jpg
    -
       name: Martha
       age: 2
-      _image: /images/TSP-2.jpg
+      dog_image: /images/TSP-2.jpg
    -
       name: Isabella
       age: 7
-      _image: /images/TSP-4.jpg
+      dog_image: /images/TSP-4.jpg
    -
       name: Jaguar
       age: 3
-      _image: /images/TSP-1.jpg
+      dog_image: /images/TSP-1.jpg
    -
       name: Lanta
       age: 4
-      _image: /images/TSP-3.jpg
+      dog_image: /images/TSP-3.jpg
    -
       name: Martha
       age: 2
-      _image: /images/TSP-2.jpg
+      dog_image: /images/TSP-2.jpg
    -
       name: Isabella
       age: 7
-      _image: /images/TSP-4.jpg
+      dog_image: /images/TSP-4.jpg
    -
       name: Jaguar
       age: 3
-      _image: /images/TSP-1.jpg
+      dog_image: /images/TSP-1.jpg
    -
       name: Martha
       age: 2
-      _image: /images/TSP-2.jpg
+      dog_image: /images/TSP-2.jpg
    -
       name: Isabella
       age: 7
-      _image: /images/TSP-4.jpg
+      dog_image: /images/TSP-4.jpg
    -
       name: Jaguar
       age: 3
-      _image: /images/TSP-1.jpg
+      dog_image: /images/TSP-1.jpg
    -
       name: Zorro
       age: 5
-      _image: /images/TSP-1.jpg
+      dog_image: /images/TSP-1.jpg
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
