Updated 2 files via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -81,6 +81,10 @@ dogs:
       name: Zorro
       age: 5
       dog_image: /images/TSP-1.jpg
+   -
+      name: Tia
+      age: 1
+      dog_image: /uploads/img-6161.jpg
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
