Updated 3 files via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -85,6 +85,14 @@ dogs:
       name: Tia
       age: 1
       dog_image: /uploads/img-6161.jpg
+   -
+      name: Sweetheart
+      age: 0.5
+      dog_image: /uploads/img-6139.jpg
+   -
+      name: Yak
+      age: 8
+      dog_image: /uploads/img-5442.jpg
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
