Updated 4 files via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -93,6 +93,18 @@ dogs:
       name: Yak
       age: 8
       dog_image: /uploads/img-5442.jpg
+   -
+      name: Lanta
+      age: 4
+      dog_image: /uploads/img-5378.jpg
+   -
+      name: Fraser
+      age: 4
+      dog_image: /uploads/img-5877.jpg
+   -
+      name: Fred
+      age: 2
+      dog_image: /uploads/img-5829.jpg
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
