Updated 2 files via CloudCannon.

--- a/all-dogs.html
+++ b/all-dogs.html
@@ -105,6 +105,10 @@ dogs:
       name: Fred
       age: 2
       dog_image: /uploads/img-5829.jpg
+   -
+      name: Karl
+      age: 7
+      dog_image: /uploads/img-5528.jpg
 ---
 <!-- intro banner -->
 <section class="grid-middle bg-featured vh30">
