--- a/all-dogs.html
+++ b/all-dogs.html
@@ -106,8 +106,8 @@ dogs:
       age: 2
       dog_image: /uploads/img-5829.jpg
    -
-      name: Karl
-      age: 7
+      name: Red
+      age: 4
       dog_image: /uploads/img-5528.jpg
 ---
 <!-- intro banner -->
